--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=FALSE
+SESSION_DOMAIN=null
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
